feat: updated swagger
